CAUSEWAY-3571: replaces java.lang.reflect.Method with ResolvedMethod